--- a/GodsAcre/CemeteryAdministration/templates/CemeteryAdministration/index.html
+++ b/GodsAcre/CemeteryAdministration/templates/CemeteryAdministration/index.html
@@ -3,7 +3,7 @@
 {% block title %}God's Acre{% endblock %}
 
 {% block content %}
-    <header>gestionare cimitir</header>
+    <header>administrare cimitir</header>
 
      <ul>
          {% for link in links %}
