--- a/GodsAcre/CemeteryAdministration/static/CemeteryAdministration/css/bootstrap-custom.css
+++ b/GodsAcre/CemeteryAdministration/static/CemeteryAdministration/css/bootstrap-custom.css
@@ -1,6 +1,6 @@
 .navbar .divider-vertical {
 height: 50px;
-margin: 0 9px;
+/*margin: 0 9px;*/
 border-right: 1px solid #ffffff;
 border-left: 1px solid #dddddd;
 }
@@ -14,4 +14,9 @@ border-left-color: #111111;
 .navbar-collapse .nav > .divider-vertical {
     display: none;
   }
+}
+
+.navbar-header .navbar-brand {
+    color: #5f5f5f;
+    font-weight: 500;
 }
