--- a/GodsAcre/CemeteryAdministration/templates/CemeteryAdministration/administration.html
+++ b/GodsAcre/CemeteryAdministration/templates/CemeteryAdministration/administration.html
@@ -1,7 +1,42 @@
 {% extends "CemeteryAdministration/base.html" %}
 
-{% block title %}Administrare{% endblock %}
+{% block title %}Gestiune{% endblock %}
 
 {% block content %}
-administrare
+
+    <section id="container-fluid">
+
+        <form method="post" id="db-add-form"></form>
+
+        <table class="table table-striped table-hover db">
+            <thead>
+                <tr>
+                    {% for table_header in table_headers %}
+                    <th>{{ table_header }}</th>
+                    {% endfor %}
+                    <th class="db-buttons">
+
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for table_row in table_rows %}
+                <tr>
+                    {% for table_data in table_row %}
+                    <td>{{ table_data }}</td>
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+
+                <tr class="db-add-row">
+                    {% for table_header in table_headers %}
+                    <td><input type="text" form="db-add-form"
+                               name="{{ table_header }}" placeholder="{{ table_header }}"></td>
+                    {% endfor %}
+                    <td><button type="submit" class="btn btn-success" form="db-add-form">+</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
 {% endblock %}
