--- a/GodsAcre/CemeteryAdministration/templates/CemeteryAdministration/base.html
+++ b/GodsAcre/CemeteryAdministration/templates/CemeteryAdministration/base.html
@@ -10,13 +10,12 @@
 
         {% load staticfiles %}
         <link rel="stylesheet" type="text/css" href="{% static 'CemeteryAdministration/css/bootstrap.css' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static 'CemeteryAdministration/css/bootstrap-theme.css' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static 'CemeteryAdministration/css/bootstrap-footer.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'CemeteryAdministration/css/bootstrap-custom.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'CemeteryAdministration/css/style.css' %}"/>
 
         <link rel="shortcut icon" href="{% static 'CemeteryAdministration/images/favicon.ico' %}">
-
-        <script src="{% static 'CemeteryAdministration/js/jquery.js' %}"></script>
-        <script src="{% static 'CemeteryAdministration/js/bootstrap.js' %}"></script>
 
         {% load base_extras %}
 
@@ -24,87 +23,98 @@
     </head>
 
     <body>
+        <!-- Fixed navbar -->
+        <!-- TODO fix resizing ?clearfix -->
         <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="/">God's Acre</a>
-            </div>
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">God's Acre</a>
+                </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li role="separator" class="divider-vertical"></li>
-                <li class="{% active_page request 'general_register' %}">
-                    <a href="{% url 'CemeteryAdministration:general_register' %}">Registru General</a></li>
-                <li class="{% active_page request 'spot' %}">
-                    <a href="{% url 'CemeteryAdministration:spot' %}">Fisa Individuala</a></li>
-                <li role="separator" class="divider-vertical"></li>
-
-
-                <li class="{% active_page request 'ownerships' %}">
-                    <a href="{% url 'CemeteryAdministration:ownerships' %}">Concesiuni</a></li>
-                <li class="{% active_page request 'constructions' %}">
-                    <a href="{% url 'CemeteryAdministration:constructions' %}">Constructii</a></li>
-                <li class="{% active_page request 'operations' %}">
-                    <a href="{% url 'CemeteryAdministration:operations' %}">Operatii</a></li>
-                <li class="{% active_page request 'revenue' %}">
-                    <a href="{% url 'CemeteryAdministration:revenue' %}">Incasari</a></li>
-                <li class="{% active_page request 'maintenance' %}">
-                    <a href="{% url 'CemeteryAdministration:maintenance' %}">Intretinere</a></li>
-                <li role="separator" class="divider-vertical"></li>
-
-                <li class="{% active_page request 'administration' %}">
-                    <a href="{% url 'CemeteryAdministration:administration' %}">Administrare</a></li>
-
-                <!--<li class="dropdown">-->
-                  <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administrare<span class="caret"></span></a>-->
-                  <!--<ul class="dropdown-menu">-->
-                    <!--<li><a href="#">Locuri de Veci</a></li>-->
-                    <!--<li role="separator" class="divider"></li>-->
-
-                    <!--<li><a href="#">Acte Concesiune</a></li>-->
-                    <!--<li><a href="#">Chitante Concesiune</a></li>-->
-                    <!--<li><a href="#">Concesionari</a></li>-->
-                    <!--<li role="separator" class="divider"></li>-->
-
-                    <!--<li><a href="#">Constructii</a></li>-->
-                    <!--<li><a href="#">Autorizatii Constructii</a></li>-->
-                    <!--<li><a href="#">Firme Constructii</a></li>-->
-                    <!--<li role="separator" class="divider"></li>-->
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li role="separator" class="divider-vertical"></li>
+                        <li class="{% active_page request 'general_register' %}">
+                            <a href="{% url 'CemeteryAdministration:general_register' %}">Registru General</a></li>
+                        <li class="{% active_page request 'spot' %}">
+                            <a href="{% url 'CemeteryAdministration:spot' %}">Fisa Individuala</a></li>
+                        <li role="separator" class="divider-vertical"></li>
 
 
-                    <!--<li><a href="#">Contributii</a></li>-->
-                    <!--<li><a href="#">Chitante Contributii</a></li>-->
-                    <!--<li><a href="#">Locuri de Veci</a></li>-->
-                    <!--<li role="separator" class="divider"></li>-->
+                        <li class="{% active_page request 'ownerships' %}">
+                            <a href="{% url 'CemeteryAdministration:ownerships' %}">Concesiuni</a></li>
+                        <li class="{% active_page request 'constructions' %}">
+                            <a href="{% url 'CemeteryAdministration:constructions' %}">Constructii</a></li>
+                        <li class="{% active_page request 'operations' %}">
+                            <a href="{% url 'CemeteryAdministration:operations' %}">Operatii</a></li>
+                        <li class="{% active_page request 'revenue' %}">
+                            <a href="{% url 'CemeteryAdministration:revenue' %}">Incasari</a></li>
+                        <li class="{% active_page request 'maintenance' %}">
+                            <a href="{% url 'CemeteryAdministration:maintenance' %}">Intretinere</a></li>
+                        <li role="separator" class="divider-vertical"></li>
 
-                    <!--<li><a href="#">Operatii</a></li>-->
-                    <!--<li role="separator" class="divider"></li>-->
+                        <!--todo maybe add dropup http://getbootstrap.com/components/#btn-dropdowns-dropup-->
+                        <li class="{% active_page request 'administration' %}">
+                            <a href="{% url 'CemeteryAdministration:administration' %}">Gestiune</a></li>
+
+                        <!--<li class="dropdown">-->
+                        <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administrare<span class="caret"></span></a>-->
+                        <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="#">Locuri de Veci</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+
+                        <!--<li><a href="#">Acte Concesiune</a></li>-->
+                        <!--<li><a href="#">Chitante Concesiune</a></li>-->
+                        <!--<li><a href="#">Concesionari</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+
+                        <!--<li><a href="#">Constructii</a></li>-->
+                        <!--<li><a href="#">Autorizatii Constructii</a></li>-->
+                        <!--<li><a href="#">Firme Constructii</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
 
 
-                    <!--<li><a href="#">Intretinere</a></li>-->
-                  <!--</ul>-->
-                <!--</li>-->
-              </ul>
+                        <!--<li><a href="#">Contributii</a></li>-->
+                        <!--<li><a href="#">Chitante Contributii</a></li>-->
+                        <!--<li><a href="#">Locuri de Veci</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
 
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Stefan N</a></li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
+                        <!--<li><a href="#">Operatii</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+
+
+                        <!--<li><a href="#">Intretinere</a></li>-->
+                        <!--</ul>-->
+                        <!--</li>-->
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Stefan N</a></li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
         </nav>
 
         <section id="content">
             {% block content %} {% endblock %}
         </section>
 
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted">Stefan Niculae | stefanconturi@gmail.com | © GPL 2015</p>
+            </div>
+        </footer>
+
+        <script src="{% static 'CemeteryAdministration/js/jquery.js' %}"></script>
+        <script src="{% static 'CemeteryAdministration/js/bootstrap.js' %}"></script>
     </body>
 
 </html>
