--- a/GodsAcre/CemeteryAdministration/static/CemeteryAdministration/css/style.css
+++ b/GodsAcre/CemeteryAdministration/static/CemeteryAdministration/css/style.css
@@ -1,13 +1,20 @@
-li a {
-    color: green;
+#content > h1 {
+    text-align: center;
 }
 
+/*
 table.db {
     width: 85%;
     margin-left: auto;
     margin-right: auto;
 }
+*/
 
 .db-add-row input {
     width: 100%;
+}
+
+.year-search {
+    margin-top: 3em;
+    margin-bottom: 5em;
 }
