--- a/Django Project/CemeteryAdministration/static/CemeteryAdministration/css/style.css
+++ b/Django Project/CemeteryAdministration/static/CemeteryAdministration/css/style.css
@@ -18,3 +18,8 @@ table.db {
     margin-top: 3em;
     margin-bottom: 5em;
 }
+
+/* TODO put this on the same line as the text box (on the left) */
+label[for="id_ani"] {
+    display: none;
+}
