--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/annual_spot_table.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/annual_spot_table.html
@@ -6,40 +6,47 @@
 
     <section class="year-search hidden-print">
         <form action="{% url 'CemeteryAdministration:maintenance' %}" method="get">
-            {{ years_form|as_bootstrap }}
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Caută</button>
+            <div class="input-group">
+                {{ years_form|as_bootstrap }}
+                <div class="input-group-btn">
+                    <button type="submit" class="btn btn-primary">Caută</button>
+                </div>
             </div>
         </form>
     </section>
 
     <section class="tables">
-        <h2 class="page-header">{{ year }}</h2>
+        {% for table in tables %}
+        <h2 class="page-header">{{ table.year }}</h2>
+
+        {% if table.rows %} <!-- if there are records -->
 
         <table class="table table-striped table-hover db">
             <thead>
                 <tr>
-                    <!-- Spot identification -->
-                    <th>#</th>
-                    <th>Parcelă</th>
-                    <th>Rând</th>
-                    <th>Loc</th>  <!--coloana-->
-
                     {% for table_header in table_headers %}
                     <th>{{ table_header }}</th>
                     {% endfor %}
                 </tr>
             </thead>
             <tbody>
-                {% for table_row in table_rows %}
+                {% for row in table.rows %}
                 <tr>
-                    {% for table_data in table_row %}
-                    <td>{{ table_data }}</td>
+                    {% for data in row %}
+                    <td>{{ data }}</td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+
+        {% else %} <!-- if there are no records -->
+
+        <p class="text-warning">Nu există înregistrări de {{ title|lower }} pentru anul {{ table.year }}.</p>
+
+        {% endif %}
+
+        {% endfor %}
     </section>
 
 {% endblock %}
