--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
@@ -20,6 +20,7 @@
         <script src="{% static 'CemeteryAdministration/js/jquery.js' %}"></script>
         <script src="{% static 'CemeteryAdministration/js/bootstrap.js' %}"></script>
         <script src="{% static 'CemeteryAdministration/js/script.js' %}"></script>
+        <script src="{% static 'CemeteryAdministration/js/sorttable.js' %}"></script> <!-- todo move sorttable only to pages with tables -->
 
         {% load base_extras %}
 
@@ -67,7 +68,7 @@
 
                         <!--todo maybe add dropup http://getbootstrap.com/components/#btn-dropdowns-dropup-->
                         <li class="{% active_page request 'administration' %}">
-                            <a href="{% url 'CemeteryAdministration:administration' %}">Gestiune</a></li>
+                            <a href="{% url 'CemeteryAdministration:administration' %}">Administrare</a></li>
 
                         <!--<li class="dropdown">-->
                         <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administrare<span class="caret"></span></a>-->
