annual spot views refactor

--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/annual_spot_table.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/annual_spot_table.html
@@ -23,6 +23,7 @@
         {% if table.rows %} <!-- if there are records -->
 
         <!--todo pagination-->
+        <!--todo replace uparrow and downarrow symbols with glyphs-->
         <table class="table table-striped table-hover sortable">
             <thead>
                 <tr class="row">
