--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
@@ -29,7 +29,7 @@
 
     <body>
         <!-- Fixed navbar -->
-        <!-- TODO fix resizing ?clearfix -->
+        <!-- FIXME navbar resize -->
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
