tests and spot detail, general register sketch

--- a/Django Project/CemeteryAdministration/static/CemeteryAdministration/css/style.css
+++ b/Django Project/CemeteryAdministration/static/CemeteryAdministration/css/style.css
@@ -20,3 +20,14 @@ label[for="id_ani"] {
 .italic {
     font-style: italic;
 }
+
+td div {
+    display: inline;
+}
+
+.field-left {
+    float: left;
+}
+.field-right {
+    float: right;
+}
