--- a/Django Project/CemeteryAdministration/static/CemeteryAdministration/css/bootstrap-custom.css
+++ b/Django Project/CemeteryAdministration/static/CemeteryAdministration/css/bootstrap-custom.css
@@ -1,22 +1,63 @@
+/* Vertical dividers */
 .navbar .divider-vertical {
-height: 50px;
-/*margin: 0 9px;*/
-border-right: 1px solid #ffffff;
-border-left: 1px solid #dddddd;
+    height: 50px;
+    border-right: 1px solid #ffffff;
+    border-left: 1px solid #dddddd;
 }
-
 .navbar-inverse .divider-vertical {
-border-right-color: #222222;
-border-left-color: #111111;
+    border-right-color: #222222;
+    border-left-color: #111111;
+}
+@media (max-width: 1060px) {
 }
 
-@media (max-width: 767px) {
-.navbar-collapse .nav > .divider-vertical {
-    display: none;
-  }
+h1 {
+    margin-bottom: 2em;
 }
 
-.navbar-header .navbar-brand {
-    color: #5f5f5f;
-    font-weight: 500;
+#content {
+    padding-bottom: 10em;
+}
+
+/* Navbar responsiveness fix */
+@media (max-width: 945px) {
+    
+    .navbar-collapse .nav > .divider-vertical {
+        display: none;
+    }
+    
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+  		display:block !important;
+	}
 }
