--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
@@ -17,11 +17,6 @@
 
         <link rel="shortcut icon" href="{% static 'CemeteryAdministration/images/favicon.ico' %}">
 
-        <script src="{% static 'CemeteryAdministration/js/jquery.js' %}"></script>
-        <script src="{% static 'CemeteryAdministration/js/bootstrap.js' %}"></script>
-        <script src="{% static 'CemeteryAdministration/js/script.js' %}"></script>
-        <script src="{% static 'CemeteryAdministration/js/sorttable.js' %}"></script> <!-- todo move sorttable only to pages with tables -->
-
         {% load base_extras %}
 
         <title> {% block title %} {{ title|title|default:"Title" }} {% endblock %} </title>
@@ -40,13 +35,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">God's Acre</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li role="separator" class="divider-vertical"></li>
                         <li class="{% active_page request 'general_register' %}">
                             <a href="{% url 'CemeteryAdministration:general_register' %}">Registru General</a></li>
                         <li class="{% active_page request 'spot' %}">
@@ -59,7 +52,7 @@
                         <li class="{% active_page request 'constructions' %}">
                             <a href="{% url 'CemeteryAdministration:constructions' %}">Construcții</a></li>
                         <li class="{% active_page request 'operations' %}">
-                            <a href="{% url 'CemeteryAdministration:operations' %}">Operații</a></li>
+                            <a href="{% url 'CemeteryAdministration:operations' %}">Înhumări</a></li>
                         <li class="{% active_page request 'revenue' %}">
                             <a href="{% url 'CemeteryAdministration:revenue' %}">Încasări</a></li>
                         <li class="{% active_page request 'maintenance' %}">
@@ -102,7 +95,7 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Stefan N</a></li>
+                        <li><a href="#">I/O</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -121,6 +114,8 @@
 
         <script src="{% static 'CemeteryAdministration/js/jquery.js' %}"></script>
         <script src="{% static 'CemeteryAdministration/js/bootstrap.js' %}"></script>
+        <script src="{% static 'CemeteryAdministration/js/script.js' %}"></script>
+        <script src="{% static 'CemeteryAdministration/js/sorttable.js' %}"></script> <!-- todo move sorttable only to pages with tables -->
     </body>
 
 </html>
