--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/spot_detail.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/spot_detail.html
@@ -3,5 +3,218 @@
 {% block title %}Fisa Individuala {{ spot_id }}{% endblock %}
 
 {% block content %}
-Fisa Individuala {{ spot_id }}
+
+    <section id="identification" class="row">
+        <!--FIXME the bar underneath this title is too much to the left-->
+        <h3 class="page-header col-lg-12">Identificare</h3>
+
+        <p id="labels" class="col-lg-1">
+            <b>
+            Cod<br>
+            Parcelă<br>
+            Rând<br>
+            Loc<br>
+            </b>
+        </p>
+        <p id="values" class="col-lg-2">
+            1050<br>
+            A<br>
+            27<br>
+            3bis<br>
+        </p>
+        <p class="col-lg-9 text-right">
+            <b>Observații</b><br>
+            Note despre locul de veci
+        </p>
+    </section>
+
+    <section id="owners">
+        <h3 class="page-header">Istoric concesiuni</h3>
+
+        <table class="table table-striped table-hover sortable">
+            <thead>
+                <tr class="row">
+                    <th class="col-lg-4">Concesionari</th>
+                    <th class="col-lg-2">Telefon</th>
+                    <th class="col-lg-1">Act</th>
+                    <th class="col-lg-1">Chitanță</th>
+                    <th class="col-lg-4">Pe Același Act</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="row">
+                    <td class="">Ana Popescu, Vasile Popescu, Ionel Ionescu</td>
+                    <td class="">0723 456 789</td>
+                    <td class="">150/2010</td>
+                    <td class="">30/2010</td>
+                    <td class="">#720 P=2F R=13 L=4, #721 P=F R=13 L=6</td>
+                </tr>
+                <tr class="row">
+                    <td class="">Alexandru Alexandrescu</td>
+                    <td class="">0765 432 108</td>
+                    <td class="">27/2005</td>
+                    <td class="">75/2005</td>
+                    <td class=""></td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section id="operations">
+        <h3 class="page-header">Istoric înhumări</h3>
+
+        <table class="table table-striped table-hover sortable">
+            <thead>
+                <tr class="row">
+                    <th class="col-lg-2">Prenume</th>
+                    <th class="col-lg-2">Nume</th>
+                    <th class="col-lg-1">An</th>
+                    <th class="col-lg-1">Tip</th>
+                    <th class="col-lg-6">Notă</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="row">
+                    <td class="">Adrian</td>
+                    <td class="">Dobre</td>
+                    <td class="">2012</td>
+                    <td class="">înhumare</td>
+                    <td class=""></td>
+                </tr>
+                <tr class="row">
+                    <td class="">Daniel</td>
+                    <td class="">Dumitrescu</td>
+                    <td class="">2011</td>
+                    <td class="">dezhumare</td>
+                    <td class="">osemintele au fost transportate</td>
+                </tr>
+                <tr class="row">
+                    <td class="">Daniel</td>
+                    <td class="">Dumitrescu</td>
+                    <td class="">2005</td>
+                    <td class="">înhumare</td>
+                    <td class=""></td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section class="row">
+        <section id="contributions" class="col-lg-3">
+            <h3 class="page-header">Contribuții</h3>
+
+            <table class="table table-striped table-hover sortable">
+                <thead>
+                    <tr class="row">
+                        <th class="col-lg-4">An</th>
+                        <th class="col-lg-4">Sumă</th>
+                        <th class="col-lg-4">Chitanță</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="row">
+                        <td class="">2012</td>
+                        <td class="">150</td>
+                        <td class="">5/2012</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="">2011</td>
+                        <td class="">150</td>
+                        <td class="">321/2010</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="">2010</td>
+                        <td class="">150</td>
+                        <td class="">321/2010</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="">2007</td>
+                        <td class="">100</td>
+                        <td class="">15/2006</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="">2006</td>
+                        <td class="">100</td>
+                        <td class="">15/2006</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="">2005</td>
+                        <td class="">100</td>
+                        <td class="">122/2005</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <p>Plătit până în 2013.</p>
+        </section>
+
+        <div class="col-lg-1">
+
+        </div>
+
+        <section id="constructions" class="col-lg-4">
+            <h3 class="page-header">Construcții</h3>
+
+            <table class="table table-striped table-hover sortable">
+                <thead>
+                    <tr class="row">
+                        <th class="col-lg-1">Autorizație</th>
+                        <th class="col-lg-1">Tip</th>
+                        <th class="col-lg-10">Constructor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="row">
+                        <td class="">1/2013</td>
+                        <td class="">bordură</td>
+                        <td class="">Regie prorie</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="">5/2010</td>
+                        <td class="">cavou</td>
+                        <td class="italic">Firma de constructii S.R.L</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="">12/2006</td>
+                        <td class="">bordură</td>
+                        <td class="">Regie proprie</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <div class="col-lg-1">
+
+        </div>
+
+        <section id="maintenance" class="col-lg-3">
+            <h3 class="page-header">Întreținere</h3>
+
+            <table class="table table-striped table-hover sortable">
+                <thead>
+                    <tr class="row">
+                        <th class="col-lg-12">Ani în care nu a fost întreținut</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="row">
+                        <td align="center">2014</td>
+                    </tr>
+                    <tr class="row">
+                        <td align="center">2013</td>
+                    </tr>
+                    <tr class="row">
+                        <td align="center">2009</td>
+                    </tr>
+                    <tr class="row">
+                        <td align="center">2008</td>
+                    </tr>
+                    <tr class="row">
+                        <td align="center">2007</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+    </section>
 {% endblock %}
