constructions, tests, grid expansion

--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/annual_spot_table.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/annual_spot_table.html
@@ -28,7 +28,7 @@
             <thead>
                 <tr class="row">
                     {% for table_header in table_headers %}
-                    <!--todo tables that don't break so early-->
+                    <!--todo tables that don't break so early, and have more width-->
                     <th class="col-md-{{ table_header.width }}">{{ table_header.name }}</th>
                     {% endfor %}
                 </tr>
@@ -37,11 +37,10 @@
                 {% for row in table.rows %}
                 <tr class="row">
                     {% for data, max_width in row|zip:max_data_widths %}
-                    <td class="{% if data|contains:'.' %}
-                               italic
-                               {% endif %}">
+                    <td>
+                        <!--todo somehow differentiate between owner built and company built-->
                         {% if data|length > max_width %}
-                            <a href="#" data-toggle="popover" data-placement="left" data-content="{{ data }}">
+                            <a href="#" data-toggle="popover" data-placement="left" data-trigger="focus" data-content="{{ data }}">
                                 {{ data|truncatechars:max_width }}</a>
                         {% else %}
                             {{ data }}
