--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/spot_detail.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/spot_detail.html
@@ -101,7 +101,7 @@
 
     <section class="row">
         <section id="contributions" class="col-lg-3">
-            <h3 class="page-header">Contribuții</h3>
+            <h3 class="page-header">Încasări</h3>
 
             <table class="table table-striped table-hover sortable">
                 <thead>
