--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/general_register.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/general_register.html
@@ -6,17 +6,16 @@
     <table class="table table-striped table-hover sortable">
         <thead>
             <tr class="row">
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Loc de veci">Cod</th>
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Parcelă loc de veci">Prcla</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Cod loc de veci">#</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Parcelă loc de veci">Parc</th>
                 <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Loc de veci">Rând</th>
                 <!--todo set in preference if it should be called _loc_ or _coloana_-->
                 <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Loc de veci">Loc</th>
-                <th class="col-lg-4" data-toggle="tooltip-top" data-container="body" title="Prenume, nume">Concesionari</th>
-                <th class="col-lg-2" data-toggle="tooltip-top" data-container="body" title="Prenume, nume">Telefoane</th>
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Act de concesiune (nr/an), * împarte actul cu alte locuri">Act</th>
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Chitanță concesiune (nr/an)">Chitanță</th>
-                <th class="col-lg-4" data-toggle="tooltip-top" data-container="body" title="Nume, înhumare/dezhumare, an">Înhumări</th>
-                <th class="col-lg-4" data-toggle="tooltip-top" data-container="body" title="Tip, autorizație (nr/an)">Construcții</th>
+                <th class="col-lg-6" data-toggle="tooltip-top" data-container="body" title="Nume, telefon">Concesionari</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Act de concesiune (nr/an). * reprezintă faptul că împarte actul cu alte locuri">Act</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Chitanțe concesiune (nr/an)">Chitanțe</th>
+                <th class="col-lg-5" data-toggle="tooltip-top" data-container="body" title="Nume, înhumare/dezhumare, an">Înhumări</th>
+                <th class="col-lg-3" data-toggle="tooltip-top" data-container="body" title="Tip, autorizație (nr/an)">Construcții</th>
                 <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Până în ce an este plătit">Plată</th>
                 <th class="col-lg-2" data-toggle="tooltip-top" data-container="body" title="Anii în care nu a fost întreținut (15 reprezintă 2015, 94 reprezintă 1994)">Neîntreținut</th>
             </tr>
@@ -26,20 +25,23 @@
                 <td class="">1</td>
                 <td class="">A</td>
                 <td class="">10</td>
-                <td class="">2b</td>
+                <td class="">1a</td>
                 <td class="">
+                    <div class="field-right italic">0723 456 789</div>
                     <div class="field-left">Ana Popescu</div><br>
                     <div class="field-left">Ionel Popescu</div>
                 </td>
-                <td class="">723 456 789</td>
                 <td class="">150/2010*</td>
-                <td class="">30/2010</td>
+                <td class="">
+                    30/2010<br>
+                    31/2010
+                </td>
                 <td class="">
                     <div class="field-left">Dumitru Dragomir</div>
-                    <div class="field-right italic">î2015</div>
+                    <div class="field-right italic">î 2015</div>
                     <br>
                     <div class="field-left">Alexandru Popa</div>
-                    <div class="field-right italic">d2015</div>
+                    <div class="field-right italic">d 2015</div>
                 </td>
                 <td class="">
                     <div class="field-left">bordură</div>
@@ -54,52 +56,58 @@
                     94 95 00 05
                 </td>
             </tr>
-            <!--<tr class="row">-->
-                <!--<td class="">21 B 10 11</td>-->
-                <!--<td class="">-->
-                    <!--<div class="field-right italic">765 432 108</div>-->
-                    <!--<div class="field-left">George Alexandrescu</div><br>-->
-                <!--</td>-->
-                <!--<td class="">7/2005</td>-->
-                <!--<td class="">21/2005</td>-->
-                <!--<td class="">-->
-                    <!--<div class="field-left">Adrian Coman</div>-->
-                    <!--<div class="field-right italic">î2007</div>-->
-                <!--</td>-->
-                <!--<td class="">-->
-                    <!--<div class="field-left">bordură</div>-->
-                    <!--<div class="field-right italic">512/2006</div>-->
-                <!--</td>-->
-                <!--<td class="">2010</td>-->
-                <!--<td class="">-->
-                    <!--2015<br>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr class="row">-->
-                <!--<td class="">501 A 31 14</td>-->
-                <!--<td class="">-->
-                    <!--<div class="field-right italic">777 555 222</div>-->
-                    <!--<div class="field-left">Ana Anghelescu</div><br>-->
-                <!--</td>-->
-                <!--<td class="">326/1990</td>-->
-                <!--<td class="">350/1990</td>-->
-                <!--<td class="">-->
-                    <!--<div class="field-left">Mircea Voinescu</div>-->
-                    <!--<div class="field-right italic">î1991</div>-->
-                <!--</td>-->
-                <!--<td class="">-->
-                    <!--<div class="field-left">bordură</div>-->
-                    <!--<div class="field-right italic">17/1998</div>-->
-                    <!--<br>-->
-                    <!--<div class="field-left">cavou</div>-->
-                    <!--<div class="field-right italic">211/1998</div>-->
-                <!--</td>-->
-                <!--<td class="">1999</td>-->
-                <!--<td class="">-->
-                    <!--2015<br>-->
-                    <!--2014<br>-->
-                <!--</td>-->
-            <!--</tr>-->
+            <tr class="row">
+                <td class="">21</td>
+                <td class="">2B</td>
+                <td class="">20</td>
+                <td class="">201</td>
+                <td class="">
+                    <div class="field-right italic">0765 432 108</div>
+                    <div class="field-left">George Alexandrescu</div><br>
+                </td>
+                <td class="">7/2005</td>
+                <td class="">21/2005</td>
+                <td class="">
+                    <div class="field-left">Adrian Coman</div>
+                    <div class="field-right italic">î 2007</div>
+                </td>
+                <td class="">
+                    <div class="field-left">bordură</div>
+                    <div class="field-right italic">512/2006</div>
+                </td>
+                <td class="">2010</td>
+                <td class="">
+                    2015<br>
+                </td>
+            </tr>
+            <tr class="row">
+                <td class="">333</td>
+                <td class="">13</td>
+                <td class="">3</td>
+                <td class="">23</td>
+                <td class="">
+                    <div class="field-right italic">0777 555 222</div>
+                    <div class="field-left">Ana Anghelescu</div><br>
+                </td>
+                <td class="">326/1990</td>
+                <td class="">350/1990</td>
+                <td class="">
+                    <div class="field-left">Mircea Voinescu</div>
+                    <div class="field-right italic">î 1991</div>
+                </td>
+                <td class="">
+                    <div class="field-left">bordură</div>
+                    <div class="field-right italic">17/1998</div>
+                    <br>
+                    <div class="field-left">cavou</div>
+                    <div class="field-right italic">211/1998</div>
+                </td>
+                <td class="">1999</td>
+                <td class="">
+                    2015<br>
+                    2014<br>
+                </td>
+            </tr>
         </tbody>
     </table>
 {% endblock %}
