--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/general_register.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/general_register.html
@@ -3,111 +3,141 @@
 {% block title %}Registru General{% endblock %}
 
 {% block content %}
+    <!--todo find a solution for smaller devices for this huge table (scrollable)-->
     <table class="table table-striped table-hover sortable">
         <thead>
             <tr class="row">
                 <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Cod loc de veci">#</th>
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Parcelă loc de veci">Parc</th>
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Loc de veci">Rând</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Parcelă">Parc</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Rând loc de veci">Rând</th>
                 <!--todo set in preference if it should be called _loc_ or _coloana_-->
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Loc de veci">Loc</th>
-                <th class="col-lg-6" data-toggle="tooltip-top" data-container="body" title="Nume, telefon">Concesionari</th>
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Act de concesiune (nr/an). * reprezintă faptul că împarte actul cu alte locuri">Act</th>
-                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Chitanțe concesiune (nr/an)">Chitanțe</th>
-                <th class="col-lg-5" data-toggle="tooltip-top" data-container="body" title="Nume, înhumare/dezhumare, an">Înhumări</th>
-                <th class="col-lg-3" data-toggle="tooltip-top" data-container="body" title="Tip, autorizație (nr/an)">Construcții</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Coloană loc de veci">Loc</th>
+
+                <th class="col-lg-4" data-toggle="tooltip-top" data-container="body" title="Prenume, nume concesionari">Concesionar</th>
+                <th class="col-lg-2" data-toggle="tooltip-top" data-container="body" title="Telefoane concesionari">Telefon</th>
+
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Actul de concesiune (nr/an). * reprezintă faptul că împarte actul cu alte locuri">Act</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Chitanțe concesiune (nr/an)">Chitanță</th>
+
+                <th class="col-lg-4" data-toggle="tooltip-top" data-container="body" title="Prenume, nume înhumați/dezhumați">Înhumat</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Anii înhumărilor/dezhumărilor">An</th>
+
+                <th class="col-lg-3" data-toggle="tooltip-top" data-container="body" title="Tipuri construcție">Construcții</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Autorizație constructie (nr/an)">Autoriz</th>
                 <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Până în ce an este plătit">Plată</th>
-                <th class="col-lg-2" data-toggle="tooltip-top" data-container="body" title="Anii în care nu a fost întreținut (15 reprezintă 2015, 94 reprezintă 1994)">Neîntreținut</th>
+                <th class="col-lg-1" data-toggle="tooltip-top" data-container="body" title="Anii în care nu a fost întreținut (15 reprezintă 2015, 94 reprezintă 1994)">Neîntreținut</th>
             </tr>
         </thead>
         <tbody>
+            <!--<tr class="row">-->
+                <!--<td>1</td>-->
+                <!--<td>A</td>-->
+                <!--<td>10</td>-->
+                <!--<td>1a</td>-->
+                <!--<td>-->
+                    <!--Ana Popescu<br>-->
+                    <!--Ionel Popescu-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--0723456789<br>-->
+                    <!--0734567890-->
+                <!--</td>-->
+                <!--<td>150/2010*</td>-->
+                <!--<td>-->
+                    <!--30/2010<br>-->
+                    <!--31/2010-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--Dumitru Dragomir<br>-->
+                    <!--Alexandru Popa-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--2015î<br>-->
+                    <!--2015d-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--bordură, cavou<br>-->
+                    <!--cavou-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--14/2011<br>-->
+                    <!--14/2013-->
+                <!--</td>-->
+                <!--<td>2013</td>-->
+                <!--<td>-->
+                    <!--14 15 16 17<br>-->
+                    <!--94 95 00 05-->
+                <!--</td>-->
+            <!--</tr>-->
+            {% for row in rows %}
             <tr class="row">
-                <td class="">1</td>
-                <td class="">A</td>
-                <td class="">10</td>
-                <td class="">1a</td>
-                <td class="">
-                    <div class="field-right italic">0723 456 789</div>
-                    <div class="field-left">Ana Popescu</div><br>
-                    <div class="field-left">Ionel Popescu</div>
+                {% for data in row %}
+                <td>
+                    {% for value in data %}
+                        {{ value }}
+                        {% if not forloop.last %}
+                        <br>
+                        {% endif %}
+                    {% empty %}
+                    -
+                    {% endfor %}
                 </td>
-                <td class="">150/2010*</td>
-                <td class="">
-                    30/2010<br>
-                    31/2010
-                </td>
-                <td class="">
-                    <div class="field-left">Dumitru Dragomir</div>
-                    <div class="field-right italic">î 2015</div>
-                    <br>
-                    <div class="field-left">Alexandru Popa</div>
-                    <div class="field-right italic">d 2015</div>
-                </td>
-                <td class="">
-                    <div class="field-left">bordură</div>
-                    <div class="field-right italic">14/2011</div>
-                    <br>
-                    <div class="field-left">cavou</div>
-                    <div class="field-right italic">14/2011</div>
-                </td>
-                <td class="">2013</td>
-                <td class="">
-                    14 15 16 17<br>
-                    94 95 00 05
-                </td>
+                {% endfor %}
             </tr>
-            <tr class="row">
-                <td class="">21</td>
-                <td class="">2B</td>
-                <td class="">20</td>
-                <td class="">201</td>
-                <td class="">
-                    <div class="field-right italic">0765 432 108</div>
-                    <div class="field-left">George Alexandrescu</div><br>
-                </td>
-                <td class="">7/2005</td>
-                <td class="">21/2005</td>
-                <td class="">
-                    <div class="field-left">Adrian Coman</div>
-                    <div class="field-right italic">î 2007</div>
-                </td>
-                <td class="">
-                    <div class="field-left">bordură</div>
-                    <div class="field-right italic">512/2006</div>
-                </td>
-                <td class="">2010</td>
-                <td class="">
-                    2015<br>
-                </td>
-            </tr>
-            <tr class="row">
-                <td class="">333</td>
-                <td class="">13</td>
-                <td class="">3</td>
-                <td class="">23</td>
-                <td class="">
-                    <div class="field-right italic">0777 555 222</div>
-                    <div class="field-left">Ana Anghelescu</div><br>
-                </td>
-                <td class="">326/1990</td>
-                <td class="">350/1990</td>
-                <td class="">
-                    <div class="field-left">Mircea Voinescu</div>
-                    <div class="field-right italic">î 1991</div>
-                </td>
-                <td class="">
-                    <div class="field-left">bordură</div>
-                    <div class="field-right italic">17/1998</div>
-                    <br>
-                    <div class="field-left">cavou</div>
-                    <div class="field-right italic">211/1998</div>
-                </td>
-                <td class="">1999</td>
-                <td class="">
-                    2015<br>
-                    2014<br>
-                </td>
-            </tr>
+            {% endfor %}
+
+            <!--<tr class="row">-->
+                <!--<td>21</td>-->
+                <!--<td>2B</td>-->
+                <!--<td>20</td>-->
+                <!--<td>201</td>-->
+                <!--<td>-->
+                    <!--0765 432 108-->
+                    <!--George Alexandrescu<br>-->
+                <!--</td>-->
+                <!--<td>7/2005</td>-->
+                <!--<td>21/2005</td>-->
+                <!--<td>-->
+                    <!--Adrian Coman-->
+                    <!--î 2007-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--bordură-->
+                    <!--512/2006-->
+                <!--</td>-->
+                <!--<td>2010</td>-->
+                <!--<td>-->
+                    <!--2015<br>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--<tr class="row">-->
+                <!--<td>333</td>-->
+                <!--<td>13</td>-->
+                <!--<td>3</td>-->
+                <!--<td>23</td>-->
+                <!--<td>-->
+                    <!--0777 555 222-->
+                    <!--Ana Anghelescu<br>-->
+                <!--</td>-->
+                <!--<td>326/1990</td>-->
+                <!--<td>350/1990</td>-->
+                <!--<td>-->
+                    <!--Mircea Voinescu-->
+                    <!--î 1991-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--bordură-->
+                    <!--17/1998-->
+                    <!--<br>-->
+                    <!--cavou-->
+                    <!--211/1998-->
+                <!--</td>-->
+                <!--<td>1999</td>-->
+                <!--<td>-->
+                    <!--2015<br>-->
+                    <!--2014<br>-->
+                <!--</td>-->
+            <!--</tr>-->
         </tbody>
     </table>
 {% endblock %}
